[project]
name = "keymakr-task3"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexsandr",email = "solomatin.sasha@icloud.com"}
]
requires-python = "^3.11"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "joblib (>=1.5.3,<2.0.0)",
    "python-multipart (>=0.0.22,<0.0.23)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
